# c_learn

./: .gitignore  CMakeLists.txt  test.txt
c/: c_main.c  c_main.h
c++/: main.cpp
c/asm/: asm.c  asm.h
c/fun/: fun.c  fun.h
c/mem_seek/: mem_seek.c  mem_seek.h
c/pointer/: pointer.c  pointer.h
c/print/: printTest.c  printTest.h
c/struct/: StructTest.c  StructTest.h
